[workspace]
members = [
  "crates/ostd",
  "crates/aster-util",
  "crates/component",
  "crates/component-macro",
  "crates/aster-time",
  "crates/aster-time-ffi",
  "crates/my_hook",
  "app",
]
resolver = "2"

[workspace.package]
edition = "2021"
name = "hook_runtime"
version = "0.1.0"


[workspace.dependencies]
log = "0.4"
hook_runtime = { path = "../hook_runtime" }
sanitizers = { path = "/home/user/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/sanitizers-0.0.11" }
spin = "0.9.4"
once_cell = "1"