[package]
name = "aster-time"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
sanitizers = "0.0.11"
ostd = { path = "../ostd" }
aster-util = { path = "../aster-util" }
component-macro = { path = "../component-macro" }
component = { path = "../component" }
once_cell = { workspace = true }